Istio/Traffic-Management/traffic-shifting/manifests/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: traffic-shifting-demo
spec:
  selector:
    istio: ingressgateway # use Istio's default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
