Istio/Traffic-Management/traffic-shifting/manifests/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: movie-backend
  namespace: traffic-shifting-demo
spec:
  host: movie-backend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
